--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
     <header>
         <nav class="navbar">
             <div class="mainNav">
-                <h2 style="display:inline"><a href="#juny"> 쭈 니</a></h2>
-                <h2><strong>Hello, Juny World</strong></h2>
+                <h2><a href="#juny"> 쭈 니</a></h2>
+                <h1 class="navTitle"><strong>Hello, Juny World</strong></h1>
                 <ul class="list-inline mb-5">
-                    <li class="list-inline-item"><a href="#aboutMe">ABOUTME</a></li>
+                    <li class="list-inline-item"><a href="#aboutMe">ABOUT ME</a></li>
                     <li class="list-inline-item"><a href="#portfolio">PORTFOLIO</a></li>
                     <li class="list-inline-item"><a href="#contact">CONTACT</a></li>
                 </ul>
