웹게시판 구조 및 스킬 추가

--- a/index.html
+++ b/index.html
@@ -441,7 +441,11 @@
                                     <li class="subject-sharp">
                                         기술 스택
                                     </li>
-                                    <span class="skill">C++</span>
+                                    <span class="skill">JAVA</span>
+                                    <span class="skill">Spring-boot</span>
+                                    <span class="skill">AWS</span>
+                                    <span class="skill">Mysql</span>
+                                    <span class="skill">Javascript</span>
                                 </ul>
                             </div>
                             <div class="weblink">
